--- a/frontend/app/src/main/res/values/styles.xml
+++ b/frontend/app/src/main/res/values/styles.xml
@@ -1,5 +1,10 @@
 <resources>
 
+    <!-- Splash screen theme -->
+    <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowBackground">@xml/splash</item>
+    </style>
+
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
