--- a/frontend/app/src/main/res/menu/user.xml
+++ b/frontend/app/src/main/res/menu/user.xml
@@ -9,7 +9,7 @@
     <item android:id="@+id/bookings"
         android:title="@string/bookings"
         android:icon="@drawable/baseline_date_range_black_24dp"/>
-    <item android:id="@+id/login"
-        android:title="@string/login"
+    <item android:id="@+id/profile"
+        android:title="@string/profile"
         android:icon="@drawable/baseline_account_circle_black_24dp"/>
 </menu>
