--- a/frontend/app/src/main/res/layout/toolbar.xml
+++ b/frontend/app/src/main/res/layout/toolbar.xml
@@ -9,8 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/colorPrimary"
-        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-    </android.support.v7.widget.Toolbar>
+        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:titleTextColor="@color/colorAccent"/>
 
     <ProgressBar
         android:id="@+id/toolbarprogress"
