--- a/frontend/app/src/main/res/layout/toolbar.xml
+++ b/frontend/app/src/main/res/layout/toolbar.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.AppBarLayout
+<com.google.android.material.appbar.AppBarLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
@@ -21,10 +21,10 @@
         android:layout_marginBottom="-12dp"
         android:indeterminate="true" />
 
-    <android.support.design.widget.TabLayout
+    <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabs"
         style="@style/AppTheme.TabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="gone"></android.support.design.widget.TabLayout>
-</android.support.design.widget.AppBarLayout>
+        android:visibility="gone"></com.google.android.material.tabs.TabLayout>
+</com.google.android.material.appbar.AppBarLayout>
