--- a/frontend/app/src/main/res/layout/fragment_home.xml
+++ b/frontend/app/src/main/res/layout/fragment_home.xml
@@ -6,9 +6,8 @@
     tools:context=".ui.HomeFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+
+    <!-- Include recycler view for home items -->
+    <include layout="@layout/home_items_list" />
 
 </FrameLayout>
