--- a/frontend/app/src/main/res/layout/booking_items_content.xml
+++ b/frontend/app/src/main/res/layout/booking_items_content.xml
@@ -2,18 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="10dp"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/card_view"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="5dp"
         android:layout_margin="5dp">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10dp"
             android:orientation="vertical">
@@ -39,19 +39,19 @@
                     android:padding="1dp"
                     android:textColor="@color/black"
                     android:textSize="18sp" />
-                <!--<TextView-->
-                    <!--android:id="@+id/txtDesc"-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:padding="1dp"-->
-                    <!--android:textColor="@color/black" />-->
-                <!--<TextView-->
-                    <!--android:id="@+id/txtPrice"-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:padding="1dp"-->
-                    <!--android:textSize="16dp"-->
-                    <!--android:textColor="@color/colorAccentDark" />-->
+                <TextView
+                    android:id="@+id/txtDesc"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="1dp"
+                    android:textColor="@color/black" />
+                <TextView
+                    android:id="@+id/txtPrice"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="1dp"
+                    android:textSize="16dp"
+                    android:textColor="@color/colorAccentDark" />
             </LinearLayout>
 
         </LinearLayout>
