icons for register and item detail

--- a/frontend/app/src/main/res/layout/fragment_item_detail.xml
+++ b/frontend/app/src/main/res/layout/fragment_item_detail.xml
@@ -26,6 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:isIndicator="true"
             android:numStars="5"
             android:rating="3.5"
             android:stepSize="0.5"
@@ -52,8 +53,8 @@
                 android:id="@+id/etName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawableStart="@drawable/baseline_account_circle_black_48px"
-                android:drawableLeft="@drawable/baseline_account_circle_black_48px"
+                android:drawableStart="@drawable/baseline_notes_black_48px"
+                android:drawableLeft="@drawable/baseline_notes_black_48px"
                 android:drawableTint="@color/colorAccent"
                 android:ems="10"
                 android:hint="@string/name"
@@ -82,12 +83,12 @@
                 android:id="@+id/etDescription"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawableStart="@drawable/baseline_account_circle_black_48px"
-                android:drawableLeft="@drawable/baseline_account_circle_black_48px"
+                android:drawableStart="@drawable/baseline_comment_black_48px"
+                android:drawableLeft="@drawable/baseline_comment_black_48px"
                 android:drawableTint="@color/colorAccent"
                 android:ems="10"
                 android:hint="@string/description"
-                android:inputType="text"
+                android:inputType="textMultiLine"
                 android:theme="@style/AppTheme.EditText"
                 tools:ignore="AutoFill"
                 tools:targetApi="m" />
@@ -112,8 +113,8 @@
                 android:id="@+id/etPrice"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawableStart="@drawable/baseline_account_circle_black_48px"
-                android:drawableLeft="@drawable/baseline_account_circle_black_48px"
+                android:drawableStart="@drawable/baseline_monetization_on_black_48px"
+                android:drawableLeft="@drawable/baseline_monetization_on_black_48px"
                 android:drawableTint="@color/colorAccent"
                 android:ems="10"
                 android:hint="@string/price"
@@ -142,8 +143,8 @@
                 android:id="@+id/etCategory"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawableStart="@drawable/baseline_account_circle_black_48px"
-                android:drawableLeft="@drawable/baseline_account_circle_black_48px"
+                android:drawableStart="@drawable/baseline_category_black_48px"
+                android:drawableLeft="@drawable/baseline_category_black_48px"
                 android:drawableTint="@color/colorAccent"
                 android:ems="10"
                 android:hint="@string/category"
@@ -172,8 +173,8 @@
                 android:id="@+id/etCondition"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawableStart="@drawable/baseline_account_circle_black_48px"
-                android:drawableLeft="@drawable/baseline_account_circle_black_48px"
+                android:drawableStart="@drawable/baseline_info_black_48px"
+                android:drawableLeft="@drawable/baseline_info_black_48px"
                 android:drawableTint="@color/colorAccent"
                 android:ems="10"
                 android:hint="@string/condition"
@@ -202,12 +203,12 @@
                 android:id="@+id/etTags"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawableStart="@drawable/baseline_account_circle_black_48px"
-                android:drawableLeft="@drawable/baseline_account_circle_black_48px"
+                android:drawableStart="@drawable/baseline_local_offer_black_48px"
+                android:drawableLeft="@drawable/baseline_local_offer_black_48px"
                 android:drawableTint="@color/colorAccent"
                 android:ems="10"
                 android:hint="@string/tags"
-                android:inputType="text"
+                android:inputType="textMultiLine"
                 android:theme="@style/AppTheme.EditText"
                 tools:ignore="AutoFill"
                 tools:targetApi="m" />
