--- a/frontend/app/src/main/res/values/styles.xml
+++ b/frontend/app/src/main/res/values/styles.xml
@@ -66,4 +66,17 @@
         <item name="itemTextColor">@xml/selector_bottom_navigation</item>
     </style>
 
+    <!-- Dialog styles -->
+    <style name="AppTheme.DialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <!--title and message color-->
+        <!--<item name="android:textColorPrimary">@color/colorPrimary</item>-->
+        <!--buttons color-->
+        <item name="colorAccent">@color/colorAccent</item>
+        <!--dialog background-->
+        <item name="android:windowBackground">@color/colorPrimary</item>
+        <!--item RadioButton or CheckBox color-->
+        <item name="colorControlNormal">@color/colorAccent</item>
+        <item name="colorControlActivated">@color/colorAccent</item>
+    </style>
+
 </resources>
