--- a/frontend/app/src/main/res/layout/fragment_items.xml
+++ b/frontend/app/src/main/res/layout/fragment_items.xml
@@ -3,9 +3,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.ItemsFragment">
 
     <!-- Include recycler view for home items -->
     <include layout="@layout/home_items_list" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabAdd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/activity_recommended_padding"
+        android:src="@drawable/ic_add_white_24px"
+        app:backgroundTint="@color/colorAccent" />
 
 </FrameLayout>
