--- a/frontend/app/src/main/res/layout/booking_items_content.xml
+++ b/frontend/app/src/main/res/layout/booking_items_content.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:padding="10dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.cardview.widget.CardView
         android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -45,13 +46,31 @@
                     android:layout_height="wrap_content"
                     android:padding="1dp"
                     android:textColor="@color/black" />
-                <TextView
-                    android:id="@+id/txtPrice"
-                    android:layout_width="match_parent"
+
+                <LinearLayout
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:padding="1dp"
-                    android:textSize="16dp"
-                    android:textColor="@color/colorAccentDark" />
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/txtPrice"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="1dp"
+                        android:textColor="@color/colorAccentDark"
+                        android:textSize="16dp"
+                        tools:text="$10" />
+
+                    <TextView
+                        android:id="@+id/txtStatus"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="1dp"
+                        android:text="pending"
+                        android:textColor="@color/colorAccentDark"
+                        android:gravity="end"
+                        android:textSize="16dp" />
+                </LinearLayout>
             </LinearLayout>
 
         </LinearLayout>
