--- a/frontend/app/src/main/res/layout/home_items_content.xml
+++ b/frontend/app/src/main/res/layout/home_items_content.xml
@@ -38,6 +38,7 @@
                     android:layout_height="wrap_content"
                     android:padding="1dp"
                     android:textColor="@color/black"
+                    android:textStyle="bold"
                     android:textSize="18sp" />
                 <TextView
                     android:id="@+id/txtDesc"
@@ -50,7 +51,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="1dp"
-                    android:textSize="16dp"
+                    android:textSize="30dp"
+                    android:textStyle="bold"
                     android:textColor="@color/colorAccentDark" />
             </LinearLayout>
 
