--- a/frontend/app/src/main/res/layout/activity_booking.xml
+++ b/frontend/app/src/main/res/layout/activity_booking.xml
@@ -10,4 +10,11 @@
         android:id="@+id/include"
         layout="@layout/toolbar" />
 
+    <FrameLayout
+        android:id="@+id/fragmentDisplay"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
+        app:layout_constraintTop_toBottomOf="@+id/include" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
