--- a/frontend/app/src/main/res/layout/activity_booking.xml
+++ b/frontend/app/src/main/res/layout/activity_booking.xml
@@ -4,11 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.BookingActivity">
+    tools:context=".ui.BookingActivity"
+    tools:layout_editor_absoluteY="25dp">
 
     <include
         android:id="@+id/include"
-        layout="@layout/toolbar" />
+        layout="@layout/toolbar"/>
 
     <FrameLayout
         android:id="@+id/fragmentDisplay"
