--- a/frontend/app/src/main/res/layout/fragment_booking_detail.xml
+++ b/frontend/app/src/main/res/layout/fragment_booking_detail.xml
@@ -81,6 +81,14 @@
                 android:layout_marginTop="10dp"
                 android:text="Cancel Booking" />
 
+            <Button
+                android:id="@+id/btnReviewBooking"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorAccent"
+                android:layout_marginTop="10dp"
+                android:text="Review Booking" />
+
         </LinearLayout>
 
     </LinearLayout>
