Implement GUI Review

--- a/frontend/app/src/main/res/layout/fragment_booking_detail.xml
+++ b/frontend/app/src/main/res/layout/fragment_booking_detail.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginBottom="50dp"
     tools:context=".ui.BookingDetailFragment">
 
     <LinearLayout
@@ -133,6 +134,11 @@
                 android:layout_height="2px"
                 android:background="@color/gray" />
 
+            <FrameLayout
+                android:id="@+id/fragmentDisplayInBookingDetail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
             <Button
                 android:id="@+id/btnCancelBooking"
                 android:layout_width="match_parent"
@@ -141,13 +147,14 @@
                 android:layout_marginTop="10dp"
                 android:text="Cancel Booking" />
 
-            <Button
-                android:id="@+id/btnReviewBooking"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/colorAccent"
-                android:layout_marginTop="10dp"
-                android:text="Review Booking" />
+            <!--<Button-->
+                <!--android:id="@+id/btnReviewBooking"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:background="@color/colorAccent"-->
+                <!--android:layout_marginTop="10dp"-->
+
+                <!--android:text="Review Booking" />-->
 
             <Button
                 android:id="@+id/btnAcceptBooking"
@@ -177,4 +184,4 @@
 
     </LinearLayout>
 
-</FrameLayout>
+</ScrollView>
