Google maps to edit user

--- a/frontend/app/src/main/res/values/colors.xml
+++ b/frontend/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#ffffff</color>
     <color name="pink">#c1a5a9</color>
     <color name="green">#7fbc52</color>
+    <color name="colorAccentA35">#59ef6b32</color>
 </resources>
