--- a/frontend/app/src/main/res/layout/activity_user.xml
+++ b/frontend/app/src/main/res/layout/activity_user.xml
@@ -145,6 +145,20 @@
                     tools:targetApi="m" />
             </com.google.android.material.textfield.TextInputLayout>
 
+            <fragment
+                android:id="@+id/map"
+                android:name="com.google.android.gms.maps.SupportMapFragment"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/map_height"
+                android:layout_marginStart="@dimen/activity_horizontal_margin"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                android:layout_marginTop="@dimen/activity_horizontal_margin"
+                android:layout_marginEnd="@dimen/activity_horizontal_margin"
+                android:layout_marginRight="@dimen/activity_horizontal_margin"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tiAddress" />
+
             <Button
                 android:id="@+id/btnSubmit"
                 android:layout_width="0dp"
@@ -161,7 +175,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tiAddress" />
+                app:layout_constraintTop_toBottomOf="@+id/map" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
