added in front end display item rating details

--- a/frontend/app/src/main/res/layout/fragment_item_detail.xml
+++ b/frontend/app/src/main/res/layout/fragment_item_detail.xml
@@ -51,20 +51,36 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btnSetImage" />
 
+        <TextView
+            android:id="@+id/txtPrice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:text="3.50 from 65 reviews"
+            android:textColor="@color/colorAccentDark"
+            android:textSize="24dp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ratingBar" />
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/tiName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="@dimen/activity_horizontal_margin"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
             app:errorEnabled="true"
             app:hintTextAppearance="@style/AppTheme.HintText"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/ratingBar">
+            app:layout_constraintTop_toBottomOf="@+id/txtPrice">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/etName"
