--- a/frontend/app/src/main/res/values/styles.xml
+++ b/frontend/app/src/main/res/values/styles.xml
@@ -80,4 +80,16 @@
         <item name="colorControlActivated">@color/colorAccent</item>
     </style>
 
+    <!-- Toolbar -->
+    <style name="AppTheme.Toolbar" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
+        <item name="android:background">@color/colorPrimary</item>
+        <item name="colorControlNormal">@color/colorAccent</item>
+        <item name="android:drawableTint" tools:targetApi="23">@color/colorAccent</item>
+        <item name="android:textColorPrimary">@color/colorAccent</item>
+        <item name="android:textColorHint">@color/colorAccent</item>
+    </style>
+    <style name="AppTheme.Toolbar.TitleText" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
+        <item name="android:textColor">@color/colorAccent</item>
+    </style>
+
 </resources>
