Improve ui for booking

--- a/frontend/app/src/main/res/layout/fragment_process_booking.xml
+++ b/frontend/app/src/main/res/layout/fragment_process_booking.xml
@@ -15,53 +15,46 @@
             android:id="@+id/tiStartDate"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:layout_marginEnd="@dimen/activity_horizontal_margin"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
             app:errorEnabled="true"
             app:hintTextAppearance="@style/AppTheme.HintText"
-            app:layout_constraintEnd_toStartOf="@+id/btnStartDate"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/include">
+            app:layout_constraintTop_toTopOf="parent">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/etStartDate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:drawableStart="@drawable/baseline_notes_black_48px"
-                android:drawableLeft="@drawable/baseline_notes_black_48px"
+                android:drawableStart="@drawable/baseline_date_range_black_48px"
+                android:drawableLeft="@drawable/baseline_date_range_black_48px"
                 android:drawableTint="@color/colorAccent"
                 android:ems="10"
                 android:hint="@string/startDateTime"
-                android:inputType="text"
+                android:clickable="true"
+                android:focusable="false"
+                android:inputType="none"
                 android:theme="@style/AppTheme.EditText"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/include"
                 tools:ignore="AutoFill"
                 tools:targetApi="m" />
         </com.google.android.material.textfield.TextInputLayout>
-
-        <Button
-            android:id="@+id/btnStartDate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="@string/pickDate"
-            android:theme="@style/AppTheme.Button"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/tiStartDate" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/tiReturnDate"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:layout_marginEnd="@dimen/activity_horizontal_margin"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
             app:errorEnabled="true"
             app:hintTextAppearance="@style/AppTheme.HintText"
-            app:layout_constraintEnd_toStartOf="@+id/btnReturnDate"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tiStartDate">
 
@@ -69,38 +62,34 @@
                 android:id="@+id/etStartTime"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawableStart="@drawable/baseline_notes_black_48px"
-                android:drawableLeft="@drawable/baseline_notes_black_48px"
+                android:drawableStart="@drawable/baseline_date_range_black_48px"
+                android:drawableLeft="@drawable/baseline_date_range_black_48px"
                 android:drawableTint="@color/colorAccent"
                 android:ems="10"
                 android:hint="@string/returnDateTime"
-                android:inputType="text"
+                android:clickable="true"
+                android:focusable="false"
+                android:inputType="none"
                 android:theme="@style/AppTheme.EditText"
                 tools:ignore="AutoFill"
                 tools:targetApi="m" />
         </com.google.android.material.textfield.TextInputLayout>
 
-
-        <Button
-            android:id="@+id/btnReturnDate"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="@string/pickDate"
-            android:theme="@style/AppTheme.Button"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/tiReturnDate" />
-
-
         <Button
             android:id="@+id/btnProcessBooking"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
+            android:layout_marginStart="@dimen/activity_horizontal_margin_wide"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin_wide"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:layout_marginEnd="@dimen/activity_horizontal_margin_wide"
+            android:layout_marginRight="@dimen/activity_horizontal_margin_wide"
             android:text="@string/book"
             android:theme="@style/AppTheme.Button"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btnReturnDate" />
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tiReturnDate" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
